--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,14 @@
-name: Build CI
+name: Flutter CI
+
+# This workflow is triggered on pushes to the repository.
 
 on:
   push:
     branches:
-      - main
-
+    - master
+    
+# on: push    # Default will running for every branch.
+    
 jobs:
   build:
     # This job will run on ubuntu virtual machine
@@ -20,11 +24,20 @@ jobs:
     # Setup the flutter environment.
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable' # 'dev', 'alpha', default to: 'stable'
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
     # Get flutter dependencies.
     - run: flutter pub get
+    
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
+    
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
     
     # Build apk.
     - run: flutter build apk
